--- a/GlobalHack/GlobalHack/static/css/markerStyle.css
+++ b/GlobalHack/GlobalHack/static/css/markerStyle.css
@@ -4,6 +4,28 @@
 #map {
     height: 100%;
 }
+#floating-panel {
+  position: absolute;
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: 'Roboto','sans-serif';
+  line-height: 30px;
+  padding-left: 10px;
+}
+#floating-panel {
+  background-color: #fff;
+  border: 1px solid #999;
+  left: 25%;
+  padding: 5px;
+  position: absolute;
+  top: 10px;
+  z-index: 5;
+}
 /* Optional: Makes the sample page fill the window. */
 
 html,
@@ -11,26 +33,4 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-}
-
-.controls {
-    background-color: #fff;
-    border-radius: 2px;
-    border: 1px solid transparent;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    box-sizing: border-box;
-    font-family: Roboto;
-    font-size: 15px;
-    font-weight: 300;
-    height: 29px;
-    margin-left: 17px;
-    margin-top: 10px;
-    outline: none;
-    padding: 0 11px 0 13px;
-    text-overflow: ellipsis;
-    width: 400px;
-}
-
-.controls:focus {
-    border-color: #4d90fe;
 }
