--- a/GlobalHack/Shelters/templates/Shelters/markerMap.html
+++ b/GlobalHack/Shelters/templates/Shelters/markerMap.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  {% load static %}
+{% load static %}
+
 <head>
     <title>PlaceID finder</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
@@ -10,9 +11,11 @@
 
 <body>
 
-    <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
     <div id="map"></div>
-    <script src= "{% static 'js/markers.js' %}" ></script>
+    <div id='floating-panel'>
+        <button id = "toggleBed" value="true" onclick="toggleBeds()">Toggle Available Beds</button>
+    </div>
+    <script src="{% static 'js/markers.js' %}"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIT5WqChLN0yTAnQNB0r5CN-shZrAtxbM&libraries=places&callback=initMap" async defer></script>
 
