added toggle bed

--- a/GlobalHack/Shelters/templates/Shelters/markerMap.html
+++ b/GlobalHack/Shelters/templates/Shelters/markerMap.html
@@ -13,7 +13,7 @@
 
     <div id="map"></div>
     <div id='floating-panel'>
-        <button id = "toggleBed" value="true" onclick="toggleBeds()">Toggle Available Beds</button>
+        <button id = "toggleBed" value="on" onclick="toggleBeds()">Toggle Available Beds</button>
     </div>
     <script src="{% static 'js/markers.js' %}"></script>
 
