--- a/GlobalHack/Auth/templates/registration/login.html
+++ b/GlobalHack/Auth/templates/registration/login.html
@@ -1,5 +1,10 @@
 {% extends 'registration/base.html' %}
+<head>
+  <link href="/home/GHVI/GlobalHack/GlobalHack/GlobalHack/static/css/bootstrap.min.css"	rel="stylesheet">
+  <link href="/home/GHVI/GlobalHack/GlobalHack/GlobalHack/static/one-page-wonder.css" rel="stylesheet">
 
+  
+</head>
 {% block title %}Login{% endblock %}
 
 {% block content %}
