--- a/GlobalHack/MainPage/templates/MainPage/home-page.html
+++ b/GlobalHack/MainPage/templates/MainPage/home-page.html
@@ -15,7 +15,7 @@
 <div id='cssmenu'>
 <ul>
    <li class='active'><a href='#'>Home</a></li>
-   <li><a href='#'>Forms</a></li>
+   <li><a href='#/shelters/NewShelter'>Forms</a></li>
    <li><a href='#'>Help</a></li>
    <li><a href='#'>About</a></li>
 </ul>
